--- a/index.html
+++ b/index.html
@@ -353,6 +353,11 @@
       color: var(--text);
     }
 
+    #player-meta-title {
+      font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas,
+        "Liberation Mono", "Courier New", monospace;
+    }
+
     .client-row {
       margin-top: 4px;
       display: flex;
@@ -509,7 +514,7 @@
           <span class="title-mark"></span>
           Mini Cinema
         </div>
-        <div class="subtitle">POC0.2 · WebTorrent Herzog mini archive</div>
+        <div class="subtitle">POC0.2 · WebTorrent cinema mini p2p archive</div>
       </div>
       <span class="chip">POC0.2</span>
     </header>
