--- a/index.html
+++ b/index.html
@@ -652,7 +652,7 @@
         <button class="client-button" id="nostr-whda-example">Generate example WHDA</button>
         <button class="client-button" id="nostr-whda-apply">Apply draft locally</button>
         <button class="client-button" id="nostr-whda-reload">Reload from relay</button>
-        <button class="client-button" id="nostr-whda-sync">Sync WHDA to relay</button>
+        <button class="client-button" id="nostr-whda-sync">Sync cinema note to relay</button>
         <span class="client-note">Draft is local-only; sync uses local key/nostr-tools when available (relays may still reject).</span>
       </div>
       <div class="client-row">
