--- a/index.html
+++ b/index.html
@@ -626,7 +626,7 @@
         <div class="client-label">
           Example content payload for kind 30317 / d=WHDA
         </div>
-        <pre class="nostr-block" id="nostr-whda" contenteditable="true">// Loading WHDA draft…</pre>
+        <pre class="nostr-block" id="nostr-whda" contenteditable="true" spellcheck="false">// Loading WHDA draft…</pre>
       </div>
       <div class="client-row">
         <div class="client-label">Remote cinema notes (last 10, by d/id)</div>
