--- a/index.html
+++ b/index.html
@@ -989,6 +989,58 @@
         });
     }
 
+    function loadBlenderWhdaExampleLibrary(listEl, countEl) {
+      const items = Array.isArray(EXAMPLE_WHDA_ITEMS)
+        ? EXAMPLE_WHDA_ITEMS
+        : [];
+      if (!items.length) {
+        setScanStatus("Metadata scan: no Blender WHDA example items");
+        filmBag = [];
+        refreshNostrDraftFromFilmBag();
+        if (countEl) {
+          countEl.textContent = "0 films";
+        }
+        if (listEl) {
+          listEl.innerHTML = "";
+        }
+        return;
+      }
+
+      filmBag = items.map((item) => ({
+        hash: item.hash,
+        title: item.title,
+      }));
+
+      whdaStatus = {};
+      refreshNostrDraftFromFilmBag();
+
+      if (listEl && countEl) {
+        listEl.innerHTML = "";
+        countEl.textContent = filmBag.length + " films (Blender WHDA)";
+
+        filmBag.forEach((item, index) => {
+          const movie = {
+            id:
+              "film-" +
+              String(index + 1)
+                .toString()
+                .padStart(2, "0"),
+            title: item.title,
+            sizeBytes: 0,
+            tags: ["blender"],
+          };
+          const node = createMovieElement(movie);
+          node.addEventListener("click", () => {
+            loadFilmFromHash(item.hash, item.title, movie.id);
+          });
+          listEl.appendChild(node);
+        });
+      }
+
+      startMetadataScanFromHashes(filmBag);
+      setScanStatus("Metadata scan: Blender WHDA example applied locally");
+    }
+
     function initMiniCinema() {
       const listEl = document.getElementById("movie-list");
       const countEl = document.getElementById("library-count");
@@ -2277,7 +2329,7 @@
           collectionMode =
             collectionModeEl.value === "herzog" ? "herzog" : "blender";
           if (collectionMode === "blender") {
-            loadBlenderFilmLibrary(listEl, countEl);
+            loadBlenderWhdaExampleLibrary(listEl, countEl);
           } else {
             loadFilmLibraryFromWhda();
           }
@@ -2285,7 +2337,7 @@
       }
 
       if (collectionMode === "blender") {
-        loadBlenderFilmLibrary(listEl, countEl);
+        loadBlenderWhdaExampleLibrary(listEl, countEl);
       } else {
         loadFilmLibraryFromWhda();
       }
