--- a/index.html
+++ b/index.html
@@ -597,8 +597,8 @@
         Infohash: —
       </div>
       <div class="client-row">
-        <div class="client-label">WHDA bag (all infohashes)</div>
-        <pre class="nostr-block" id="whda-infohashes">// WHDA bag not loaded yet.</pre>
+        <div class="client-label">Cinema bag (all infohashes)</div>
+        <pre class="nostr-block" id="whda-infohashes">// Cinema bag not loaded yet.</pre>
       </div>
       <div class="client-row">
         <div class="client-label">Presets from Herzog archive</div>
