--- a/index.html
+++ b/index.html
@@ -262,20 +262,23 @@
     }
 
     .status-panel {
-      display: grid;
-      grid-template-columns: repeat(4, minmax(0, 1fr));
-      gap: 8px;
+      display: flex;
+      flex-wrap: wrap;
+      gap: 12px;
+      align-items: baseline;
+      margin-top: 4px;
     }
 
     .status-item {
-      padding: 8px 10px;
-      border-radius: 8px;
-      background: rgba(0, 0, 0, 0.4);
-      border: 1px solid rgba(255, 255, 255, 0.04);
-      min-height: 54px;
-      display: flex;
-      flex-direction: column;
-      justify-content: space-between;
+      display: inline-flex;
+      flex-direction: row;
+      gap: 4px;
+      align-items: baseline;
+      min-height: 0;
+      padding: 0;
+      border-radius: 0;
+      background: transparent;
+      border: none;
     }
 
     .status-label {
@@ -634,7 +637,7 @@
           <span class="dot" id="status-dot"></span>
           WebTorrent client in browser
         </div>
-        <div class="status-caption-right" id="status-extra">Hash-only mock data</div>
+        <div class="status-caption-right" id="status-extra">Library idle; no active swarm</div>
       </div>
       <div class="infohash" id="active-infohash">
         Infohash: —
@@ -904,7 +907,7 @@
       if (totalSizeEl) {
         totalSizeEl.textContent = "unknown";
       }
-      document.getElementById("status-extra").textContent = "Collection metadata not loaded";
+      document.getElementById("status-extra").textContent = "Library idle; no active swarm";
       const dot = document.getElementById("status-dot");
       dot.style.background = "#5a8f63";
       dot.style.boxShadow = "none";
